--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,7 +11,10 @@
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/socket.io-client": "^1.4.32",
+    "bootstrap": "^4.4.1",
+    "node-sass": "^4.13.1",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
     "socket.io-client": "^2.3.0",
