--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.5",
     "@types/socket.io-client": "^1.4.32",
     "bootstrap": "^4.4.1",
+    "font-awesome": "^4.7.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
