--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/cors": "^2.8.6",
+    "@types/socket.io": "^2.1.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
