--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,9 +12,13 @@
   "license": "MIT",
   "dependencies": {
     "@types/cors": "^2.8.6",
+    "@types/dotenv": "^8.2.0",
+    "@types/mysql": "^2.15.9",
     "@types/socket.io": "^2.1.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
