--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -1,9 +1,9 @@
-FROM node
+FROM node:13-alpine
 
 WORKDIR /usr/src/app
 
 COPY package*.json ./
-RUN npm install
+RUN npm install --production
 
 COPY . .
 
