--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/moment": "^2.13.0",
     "redux-devtools": "^3.5.0",
     "redux-devtools-extension": "^2.13.8"
   }
