--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsc -p .  && nodemon dist/",
     "watch": "concurrently \"tsc -w\" \"nodemon dist/\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -p ."
   },
   "author": "",
   "license": "MIT",
