Docker for production

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,8 @@ services:
     volumes:
       - ./Backend:/usr/src/app
       - /usr/src/app/node_modules
-    links:
+    depends_on:
       - database
-    ports:
-      - 3001:3001
   
   backend-secondary:
     image: taan-chat-system_backend
@@ -18,10 +16,8 @@ services:
     volumes:
       - ./Backend:/usr/src/app
       - /usr/src/app/node_modules
-    links:
+    depends_on:
       - backend
-    ports:
-      - 3002:3001
 
   frontend:
     build: ./Frontend
@@ -30,7 +26,7 @@ services:
       - ./Frontend:/usr/src/app
       - /usr/src/app/node_modules
     ports:
-      - 3000:3000
+      - 5000:5000
   
   proxy:
     build: ./ProxyServer
