--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -3,10 +3,13 @@ FROM node:13-alpine
 WORKDIR /usr/src/app
 
 COPY package*.json ./
+
 RUN npm install
 
 COPY . .
 
+RUN npm run build
+
 EXPOSE 3001
 
-CMD [ "npm", "run", "watch" ]
+CMD [ "node", "dist/"]
