--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -3,10 +3,14 @@ FROM node:13-alpine
 WORKDIR /usr/src/app
 
 COPY package*.json ./
-RUN npm install --production
+
+RUN npm install --production; \
+    npm install -g serve
 
 COPY . .
 
+RUN npm run build
+
 EXPOSE 3000
 
-CMD [ "npm", "start"]
+CMD [ "serve", "-s", "build"]
