--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -1,12 +1,6 @@
 version: '3.3'
 
 services:
-  database:
-    image: mysql:5
-    container_name: database
-    ports:
-      - 3306:3306
-
   backend:
     image: taan-chat-system_backend:lastest
     container_name: backend
@@ -24,4 +18,9 @@ services:
     image: taan-chat-system_frontend:lastest
     container_name: frontend
     ports:
-      - 5000:5000
+      - 5000:50
+  database:
+    image: taan-chat-system_database:lastest
+    container_name: database
+    ports:
+      - 3306:3306
