--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -6,6 +6,8 @@ services:
     container_name: backend
     depends_on:
       - database
+    ports:
+      - 3001:3001
 
   frontend:
     build: ./Frontend
