--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,7 +21,8 @@
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "mysql": "^2.18.1",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "socket.io-redis": "^5.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.3",
