--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -2,13 +2,13 @@ version: '3.7'
 
 services:
   database:
-    image: taan-chat-system_database:lastest
+    image: bdockbockd/taan-chat-system_database:lastest
     container_name: database
     ports:
       - 3306:3306
 
   backend:
-    image: taan-chat-system_backend:lastest
+    bdockbockd/taan-chat-system_backend
     container_name: backend
     depends_on:
       - database
@@ -18,7 +18,7 @@ services:
      - 3001:3001
 
   frontend:
-    image: taan-chat-system_frontend:lastest
+    image: bdockbockd/taan-chat-system_frontend
     container_name: frontend
     ports:
       - 5000:5000
