--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
 version: '3.3'
 
 services:
+  database:
+    build: ./Database
+    container_name: database
+    ports:
+      - 3306:3306
+
   backend:
     build: ./Backend
     container_name: backend
@@ -31,9 +37,6 @@ services:
       - backend
     ports:
       - 8080:8080
-  
-  database:
-    build: ./Database
-    container_name: database
-    ports:
-      - 3306:3306
+
+  redis:
+    image: redis
