--- a/ProxyServer/nginx.conf
+++ b/ProxyServer/nginx.conf
@@ -22,6 +22,10 @@ http {
   upstream nodes {
     ip_hash;
     
-    server backend:3001;
+    server http://ip172-18-0-88-bqa9372osm4g0088qr30-3001.direct.labs.play-with-docker.com;
+    server http://ip172-18-0-24-bqa9372osm4g0088qr30-3001.direct.labs.play-with-docker.com;
+    server http://ip172-18-0-76-bqa9372osm4g0088qr30-3001.direct.labs.play-with-docker.com;
   }
+    
+    
 }
