--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,6 +1,9 @@
-MYSQL_HOST=localhost
+MYSQL_HOST=database
 MYSQL_USER=root
 MYSQL_PASSWORD=
 MYSQL_DATABASE=taan
 
 SOCKET_PORT=3001
+
+REDIS_HOST=redis
+REDIS_PORT=6379
