--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -4,13 +4,11 @@ WORKDIR /usr/src/app
 
 COPY package*.json ./
 
-RUN npm install --production; \
-    npm install -g serve
+RUN npm install --production
 
 COPY . .
 
-RUN npm run build
 
 EXPOSE 3000
 
-CMD [ "serve", "-s", "build"]
+CMD [ "npm", "start"]
