--- a/ProxyServer/nginx.conf
+++ b/ProxyServer/nginx.conf
@@ -23,6 +23,6 @@ http {
     ip_hash;
     
     server backend:3001;
-    server backend-secondary:3001;
+    server backend-secondary:3001 backup;
   }
 }
